# structs_new

./: Cargo.toml  LICENSE  README.md
examples/: lib.rs  parse.rs
src/: lib-backup.rs  lib.rs  structs.rs  structs2.rs
tests/: test.rs
tests/ui/: struct_new1.rs  struct_new2-multi.rs  struct_new2.rs
