[package]
name = "proc"
version = "0.0.1"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0", features = ["extra-traits", "full"]}
quote = "1.0"

[dev-dependencies]
trybuild = "1"

[[bin]]
name = "struct_new1"
path = "./tests/ui/struct_new1.rs"

[[bin]]
name = "struct_new2"
path = "./tests/ui/struct_new2.rs"

[[bin]]
name = "struct_new2-multi"
path = "./tests/ui/struct_new2-multi.rs"
